--- a/PasswordManagerMainWindow/Auth/PasswordReset.xaml
+++ b/PasswordManagerMainWindow/Auth/PasswordReset.xaml
@@ -18,7 +18,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
-            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="10"/>
@@ -67,6 +67,15 @@
                  Height="40"
                  Style="{StaticResource EmailTextBoxStyle}"/>
 
+        <Button x:Name="SendCode" Grid.Column="2"
+            Grid.Row="6"
+            Content="{x:Static res:Resources.PasswordResetSendCode}"
+                HorizontalAlignment="Center"
+                Height="40"
+                Width="60"
+                Style="{StaticResource SubmitEmailButtonStyle}" 
+                Click="SendCode_Click"
+                />
         <TextBlock Text="{x:Static res:Resources.PasswordResetCode}"
                    Grid.Row="8" 
                    Grid.Column="1"
@@ -118,7 +127,7 @@
                            Style="{StaticResource PasswordCompexityRectangleStyle}"/>
             </DockPanel>
 
-            <TextBlock x:Name="PasswordComplexityTextBlock"
+            <TextBlock x:Name="ErrorTextBlock"
                        TextWrapping="Wrap" 
                        Text=""
                        HorizontalAlignment="Center"
@@ -135,6 +144,7 @@
                 Width="160"
                 Height="50" 
                 Style="{StaticResource SubmitButtonStyle}" 
+                
                 />
         <TextBlock x:Name="BackTextBlock"
                    Grid.Row="14" 
