--- a/PasswordManagerMainWindow/Themes/DarkTheme.xaml
+++ b/PasswordManagerMainWindow/Themes/DarkTheme.xaml
@@ -15,6 +15,7 @@
 
     <Color x:Key="SubmitButton.Static.Background" >#7289da</Color>
     <Color x:Key="SubmitButton.IsPressed.Background" >#99aab5</Color>
+    <Color x:Key="SubmitButton.IsEnabledFalse.Background" >#99aab5</Color>
     <Color x:Key="SubmitButton.Text.Foreground" >White</Color>
 
     <Color x:Key="EmailTextBox.Static.Border.Background" >#2c2f33</Color>
@@ -22,6 +23,8 @@
     <Color x:Key="EmailTextBox.IsMouseOver.Border.BorderBrush" >LightGray</Color>
     <Color x:Key="EmailTextBox.IsFocused.Border.BorderBrush" >#7289da</Color>
     <Color x:Key="EmailTextBox.Static.BorderBrush" >LightGray</Color>
+    <Color x:Key="EmailTextBox.IsEnabledFalse.Background">Gray</Color>
+    <Color x:Key="EmailTextBox.IsEnabledFalse.Border.BorderBrush">#99aab5</Color>
 
     <Color x:Key="PasswordBox.Static.Border.Background" >#2c2f33</Color>
     <Color x:Key="PasswordBox.Static.Border.BorderBrush" >LightGray</Color>
