--- a/PasswordManagerMainWindow/Auth/EmailConfirmation.xaml
+++ b/PasswordManagerMainWindow/Auth/EmailConfirmation.xaml
@@ -58,7 +58,7 @@
                 HorizontalAlignment="Center"
                 Width="160"
                 Height="50" 
-                Style="{StaticResource SubmitButtonStyle}" 
+                Style="{StaticResource SubmitButtonStyle}" Click="Submit_Click" 
                 />
     </Grid>
 </Page>
