--- a/PasswordManagerWindow/MainWindow/MainWindow.xaml
+++ b/PasswordManagerWindow/MainWindow/MainWindow.xaml
@@ -5,8 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordManager.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="550"
+        Width="800"
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen"
+        AllowsTransparency="True">
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="30"/>
+    </WindowChrome.WindowChrome>
+    
     <Grid>
-        
+        <StackPanel WindowChrome.IsHitTestVisibleInChrome="True"
+                    Grid.Column="1"                    
+                    Grid.ColumnSpan="2"
+                    Grid.Row="0">
+            <Button x:Name="CloseApp" 
+                    HorizontalAlignment="Right" 
+                    Height="30" Width="30" 
+                    Content="&#xE711;" 
+                    Style="{StaticResource CloseAppButtonStyle}"
+                    Click="CloseApp_Click"/>
+
+        </StackPanel>
     </Grid>
 </Window>
