--- a/PasswordManagerWindow/Themes/DarkTheme.xaml
+++ b/PasswordManagerWindow/Themes/DarkTheme.xaml
@@ -14,17 +14,28 @@
     <Color x:Key="AuthErrorTextBlock.Static.Foreground" >Red</Color>
 
     <Color x:Key="SubmitButton.Static.Background" >#7289da</Color>
-    <Color x:Key="SubmitButton.IsPressed.Background" >#99aab5</Color>
+    <Color x:Key="SubmitButton.IsMouseOver.Background" >#506099</Color>
+    <Color x:Key="SubmitButton.IsPressed.Background" >#445283</Color>
     <Color x:Key="SubmitButton.IsEnabledFalse.Background" >#99aab5</Color>
     <Color x:Key="SubmitButton.Text.Foreground" >White</Color>
+    
+    <Color x:Key="TextBox.Static.Border.Background" >#2c2f33</Color>
+    <Color x:Key="TextBox.Static.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="TextBox.IsMouseOver.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="TextBox.IsFocused.Border.BorderBrush" >#7289da</Color>
+    <Color x:Key="TextBox.Static.BorderBrush" >LightGray</Color>
+    <Color x:Key="TextBox.IsEnabledFalse.Background">Gray</Color>
+    <Color x:Key="TextBox.IsEnabledFalse.Border.BorderBrush">#99aab5</Color>
 
-    <Color x:Key="EmailTextBox.Static.Border.Background" >#2c2f33</Color>
-    <Color x:Key="EmailTextBox.Static.Border.BorderBrush" >LightGray</Color>
-    <Color x:Key="EmailTextBox.IsMouseOver.Border.BorderBrush" >LightGray</Color>
-    <Color x:Key="EmailTextBox.IsFocused.Border.BorderBrush" >#7289da</Color>
-    <Color x:Key="EmailTextBox.Static.BorderBrush" >LightGray</Color>
-    <Color x:Key="EmailTextBox.IsEnabledFalse.Background">Gray</Color>
-    <Color x:Key="EmailTextBox.IsEnabledFalse.Border.BorderBrush">#99aab5</Color>
+
+    <Color x:Key="SearchTextBox.Static.Border.Background" >#2c2f33</Color>
+    <Color x:Key="SearchTextBox.Static.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="SearchTextBox.IsMouseOver.Border.BorderBrush" >LightGray</Color>
+    <Color x:Key="SearchTextBox.IsFocused.Border.BorderBrush" >#7289da</Color>
+    <Color x:Key="SearchTextBox.Static.BorderBrush" >LightGray</Color>
+    <Color x:Key="SearchTextBox.IsEnabledFalse.Background">Gray</Color>
+    <Color x:Key="SearchTextBox.IsEnabledFalse.Border.BorderBrush">#99aab5</Color>
+    <Color x:Key="SearchTextBox.Placeholder.Foreground">#99aab5</Color>
 
     <Color x:Key="PasswordBox.Static.Border.Background" >#2c2f33</Color>
     <Color x:Key="PasswordBox.Static.Border.BorderBrush" >LightGray</Color>
@@ -57,4 +68,17 @@
 
     <ImageSource x:Key="ClosedEye">/Auth/Assets/closed_eye_white.png</ImageSource>
     <ImageSource x:Key="OpenEye">/Auth/Assets/eye_white.png</ImageSource>
+
+
+    <Color x:Key="NavmenuItem.Active.Foreground">#ffffff</Color>
+    <Color x:Key="NavmenuItem.InActive.Foreground">#99aab5</Color>
+    <Color x:Key="NavmenuItem.Pressed.Background" >#7289da</Color>
+    <Color x:Key="NavmenuItem.IsMouseOver.Foreground" >#FFFFFF</Color>
+
+    <Color x:Key="AddButton.Static.Background" >#7289da</Color>
+    <Color x:Key="AddButton.IsMouseOver.Background" >#506099</Color>
+    <Color x:Key="AddButton.IsPressed.Background" >#445283</Color>
+    <Color x:Key="AddButton.IsEnabledFalse.Background" >#99aab5</Color>
+    <Color x:Key="AddButton.Text.Foreground" >White</Color>
+
 </ResourceDictionary>
