--- a/PasswordManagerMainWindow/Auth/Auth.xaml
+++ b/PasswordManagerMainWindow/Auth/Auth.xaml
@@ -36,8 +36,8 @@
             <Button x:Name="CloseApp" 
                     HorizontalAlignment="Right" 
                     Height="30" Width="30" 
-                    Content="&#xE711;" 
-                    Style="{StaticResource CloseAppButtonStyle}"
+                    Content="&#xE8BB;" 
+                    Style="{StaticResource CloseButtonStyle}"
                     Click="CloseWindow"/>
             
         </StackPanel>
