--- a/PasswordManagerMainWindow/Auth/Signup.xaml
+++ b/PasswordManagerMainWindow/Auth/Signup.xaml
@@ -66,7 +66,7 @@
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold" 
                    Height="33" />
-
+<!--TODO: make styles for headers-->
         <TextBlock Text="{x:Static res:Resources.FillAllFields}" 
                    Grid.Row="3" 
                    Grid.Column="1"
@@ -93,7 +93,7 @@
                  Grid.Row="6" 
                  Grid.Column="1"
                  BorderThickness="2"                 
-                 Padding="5,0,30,0"
+                
                  Style="{StaticResource EmailTextBoxStyle}" 
                  TextChanged="EmailTextBox_TextChanged"
                  Height="40"  
