--- a/PasswordManagerMainWindow/Styles/MainPageStyles.xaml
+++ b/PasswordManagerMainWindow/Styles/MainPageStyles.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="CloseAppButtonStyle.Static.Background" Color="{DynamicResource CloseAppButton.Static.Background}"/>
-    <SolidColorBrush x:Key="CloseAppButtonStyle.IsMouseOver.Background" Color="{DynamicResource CloseAppButton.IsMouseOver.Background}"/>
-    <SolidColorBrush x:Key="CloseAppButtonStyle.IsPressed.Background" Color="{DynamicResource CloseAppButton.IsPressed.Background}"/>
+    <SolidColorBrush x:Key="WindowButtonStyle.Static.Background" Color="{DynamicResource WindowButton.Static.Background}"/>
+    <SolidColorBrush x:Key="WindowButtonStyle.IsMouseOver.Background" Color="{DynamicResource WindowButton.IsMouseOver.Background}"/>
+    <SolidColorBrush x:Key="WindowButtonStyle.IsPressed.Background" Color="{DynamicResource WindowButton.IsPressed.Background}"/>
 
     <LinearGradientBrush x:Key="GradientRectangleStyle.Static.Fill" StartPoint="0,0" EndPoint="1,0">
         <GradientStop Color="{DynamicResource GradientStop1}" Offset="0"/>
@@ -11,7 +11,7 @@
         <GradientStop Color="{DynamicResource GradientStop3}" Offset="1"/>
     </LinearGradientBrush>
 
-    <Style x:Key="CloseAppButtonStyle" TargetType="Button">
+    <Style x:Key="CloseButtonStyle" TargetType="Button">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
@@ -28,19 +28,19 @@
                                        HorizontalAlignment="Center"
                                        FontFamily="Segoe MDL2 Assets"
                                        Foreground="{DynamicResource TextColor}"
-                                       FontSize="16"/>
+                                       FontSize="10"/>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="Background" Value="{DynamicResource CloseAppButtonStyle.Static.Background}"/>
+            <Setter Property="Background" Value="{DynamicResource WindowButtonStyle.Static.Background}"/>
         </Style.Setters>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{DynamicResource CloseAppButtonStyle.IsMouseOver.Background}"/>
+                <Setter Property="Background" Value="{DynamicResource WindowButtonStyle.IsMouseOver.Background}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="{DynamicResource CloseAppButtonStyle.IsPressed.Background}"/>
+                <Setter Property="Background" Value="{DynamicResource WindowButtonStyle.IsPressed.Background}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
