--- a/PasswordManagerWindow/Pages/Home.xaml
+++ b/PasswordManagerWindow/Pages/Home.xaml
@@ -54,16 +54,172 @@
         <!--<Grid Grid.Row="2" Grid.ColumnSpan="3" Background="AntiqueWhite"/>-->
         <TextBox x:Name="SearchTextBox" Text="{Binding DataFilter, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="2" Height="30" Width="300" HorizontalAlignment="Right" Margin="0,0,100,0" Foreground="{DynamicResource SearchTextBoxStyle.Placeholder.Foreground}" Style="{StaticResource SearchTextBox}"  GotFocus="SearchTextBox_GotFocus" LostFocus="SearchTextBox_LostFocus"/>
         <Button x:Name="AddPasswordButton" Grid.Row="2" Grid.Column="0" Width="40" Height="40" Style="{StaticResource AddButtonStyle}" Content="&#xE710;" HorizontalAlignment="Left" Margin="100,0,0,0" Click="AddPasswordButton_Click"/>
-        <!--<ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,0" ItemsSource="{Binding AuthenticationDataCollectionView}" >
-            <ListView.View>
-                <GridView >
-                    <GridViewColumn Width="338" DisplayMemberBinding="{Binding Path=Resource}">Resource</GridViewColumn>
-                    <GridViewColumn Width="338" DisplayMemberBinding="{Binding Path=Login}">Login</GridViewColumn>
-                    <GridViewColumn Width="338" DisplayMemberBinding="{Binding Path=Password}">Password</GridViewColumn>
-                    <GridViewColumn Width="338">Others</GridViewColumn>
-                </GridView>
-            </ListView.View>
-        </ListView>-->
+
+        <Grid x:Name="AddEditForm"   Height="600" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource AddEditForm}">
+            <Grid.RenderTransform>
+                <ScaleTransform CenterX="250" CenterY="300" x:Name="FormScailing"/>
+            </Grid.RenderTransform>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="85"/>
+                <ColumnDefinition Width="320"/>
+                <ColumnDefinition Width="85"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="35"/>
+
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="10"/>
+
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="10"/>
+
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="10"/>
+
+                <RowDefinition Height="60"/>
+
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="120"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="Add a new password" 
+                   Grid.Row="1" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="28" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   Height="33" />
+
+            <TextBlock Text="Fill all following fields" 
+                   Grid.Row="2" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   Grid.ColumnSpan="2" 
+                   Height="17" 
+                   />
+
+            <TextBlock Text="Resource" 
+                   Grid.Row="4" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   />
+
+            <TextBox x:Name="ResourceTextBox" 
+                 Grid.Row="5" 
+                 Grid.Column="1"
+                 BorderThickness="2"                 
+                
+                 Style="{StaticResource TextBoxStyle}" 
+                
+                 Height="40"  
+                 />
+
+            <TextBlock Text="Login" 
+                   Grid.Row="7" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   />
+
+            <TextBox x:Name="LoginTextBox" 
+                 Grid.Row="8" 
+                 Grid.Column="1"
+                 BorderThickness="2"                 
+                
+                 Style="{StaticResource TextBoxStyle}" 
+                
+                 Height="40"  
+                 />
+            <TextBlock Text="Password" 
+                   Grid.Row="10" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   />
+
+            <TextBox x:Name="PasswordTextBox" 
+                 Grid.Row="11" 
+                 Grid.Column="1"
+                 BorderThickness="2"                 
+                
+                 Style="{StaticResource TextBoxStyle}" 
+                 
+                 Height="40"  
+                 />
+            <Button x:Name="SuggestPassword" Content="Password" Background="White" Height="30" Width="320" Grid.Column="1" Grid.Row="11" Grid.RowSpan="3"/>
+            <StackPanel Grid.Row="13" 
+                    Grid.Column="1">
+                <DockPanel x:Name="PasswordComplexityPanel">
+                    <Rectangle x:Name="VeryWeakPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"
+                           Margin="2,0"/>
+                    <Rectangle x:Name="WeakPasswordRectangle"
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                    <Rectangle x:Name="NormalPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                    <Rectangle x:Name="StrongPasswordRectangle"
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                    <Rectangle x:Name="VeryStrongPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                </DockPanel>
+
+                <TextBlock x:Name="PasswordComplexityTextBlock"
+                       TextWrapping="Wrap" 
+                       Text=""
+                       HorizontalAlignment="Center"
+                       Margin="0,5,0,0"
+                       FontSize="14"
+                       Width="205" 
+                       TextAlignment="Center"/>
+            </StackPanel>
+
+
+            <Button x:Name="SubmitButton" 
+                Grid.Column="1"
+                Grid.Row="14"
+                Content="Submit"
+                Width="160"
+                Height="50"  
+                Style="{StaticResource SubmitButtonStyle}" 
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                />
+            <Button Grid.Column="1"
+                            Name="CloseEditAddForm"
+                Grid.Row="14" Content="Cancel"
+                            Style="{StaticResource CancelButton}"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Click="CloseEditAddForm_Click"
+                            />
+
+        </Grid>
+
         <DataGrid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,0" CanUserResizeColumns="False" SelectionUnit="Cell" ItemsSource="{Binding AuthenticationDataCollectionView}"  CanUserSortColumns="False" AutoGenerateColumns="False" RowHeaderWidth="0" CanUserResizeRows="False" IsReadOnly="True" CanUserReorderColumns="False" GridLinesVisibility="None" >
 
             <DataGrid.Columns>
@@ -74,15 +230,8 @@
         </DataGrid>
         
         <Button x:Name="deletesomeshit" Content="SOSNI" Click="deletesomeshit_Click"/>
-        <!--<Grid x:Name="Shadow" Background="Black" Opacity="0.5"   Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Visibility="Visible" >
-        </Grid>
-        <Grid x:Name="FormBody" Background="Red" VerticalAlignment="Center" HorizontalAlignment="Center" Height="400" Width="700" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="20"/>
 
-            </Grid.ColumnDefinitions>
-        </Grid>-->
-
+        
 
     </Grid>
 </Page>
