--- a/PasswordManagerWindow/Styles/MainStyles.xaml
+++ b/PasswordManagerWindow/Styles/MainStyles.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                          
+                    >
 
     <SolidColorBrush x:Key="WindowButtonStyle.Static.Background" Color="{DynamicResource WindowButton.Static.Background}"/>
     <SolidColorBrush x:Key="WindowButtonStyle.IsMouseOver.Background" Color="{DynamicResource WindowButton.IsMouseOver.Background}"/>
@@ -328,27 +330,12 @@
     </Style>
     <!--Visibility="Collapsed" x:Name="FormBody" Background="Red" VerticalAlignment="Center" HorizontalAlignment="Center"-->
     <Style x:Key="AddEditForm" TargetType="Grid">
-        
+
         <Style.Setters>
-            <Setter Property="Visibility" Value="Collapsed"/>
+            <Setter Property="Visibility" Value="Visible"/>
             <Setter Property="Background" Value="{DynamicResource MainColor}"/>
-           
-            
+
         </Style.Setters>
-        <Style.Triggers>
-            <Trigger Property="Visibility" Value="Visible">
-                <Trigger.EnterActions>
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimation Duration="0:0:2" From="0" To="500" Storyboard.TargetProperty="Width"/>
-                            <DoubleAnimation Duration="0:0:2" From="0" To="600" Storyboard.TargetProperty="Height"/>
-                            <!--<DoubleAnimation Duration="0:0:2" From="0.01" To="1" Storyboard.TargetProperty="RenderTransform.ScaleTransform.X"/>
-                            <DoubleAnimation Duration="0:0:2" From="0.01" To="1" Storyboard.TargetProperty="RenderTransform.ScaleTransform.Y"/>-->
-                        </Storyboard>
-                    </BeginStoryboard>
-                </Trigger.EnterActions>
-            </Trigger>
-        </Style.Triggers>
     </Style>
 
     <Style x:Key="TextBoxStyle" TargetType="TextBox">
